--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@ form{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: black;
+    color: white;
     margin: 0 auto;
 
 }
@@ -446,6 +446,7 @@ form textarea{
     padding: 0.5em;
     border-radius: 1rem;
     border: 3px solid var(--my-three-color);
+    color: black;
 }
 .form-btn{
     width: 50vw;
