--- a/style.css
+++ b/style.css
@@ -439,6 +439,7 @@ form input{
     border-radius: 10em;
     border: 3px solid var(--my-three-color);
     background-color: #171435;
+    color: white ;
 }
 form textarea{
     width: 50vw;
